fix: change json-server to port 80, nodemon watch specific files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,12 @@
 version: '3'
 
 services:
-  docs:
+  api:
     build: .
     command: npm run dev
     volumes:
-      - ./index.js:/app/index.js:delegated
+      - ./index.js:/app/index.js
+      - ./package.json:/app/package.json:delegated
       - ./routes.json:/app/routes.json:delegated
       - ./middleware.js:/app/middleware.js:delegated
     environment:
