--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0-semantically-released",
   "private": true,
   "scripts": {
-    "start": "json-server -w --fks _id --host 0.0.0.0 --routes routes.json --middlewares ./middleware.js -p 4000 index.js",
-    "dev": "nodemon --exec npm start"
+    "start": "json-server -w --fks _address --id=address --host 0.0.0.0 --routes routes.json --middlewares middleware.js -p 80 index.js",
+    "dev": "nodemon -w index.js -w middleware.js -w routes.json --exec npm start"
   },
   "dependencies": {
     "faker": "git+https://git@github.com/Marak/faker.js.git#d3ce6f1",
