--- a/package.json
+++ b/package.json
@@ -3,27 +3,28 @@
   "version": "0.0.0-semantically-released",
   "private": true,
   "scripts": {
-    "start": "json-server -w --fks Address --id address --host 0.0.0.0 --routes routes.json --middlewares middleware.js -p 80 index.js",
-    "dev": "nodemon -w index.js -w middleware.js -w routes.json --exec npm start",
+    "start": "./server.sh",
+    "dev": "nodemon -w db.js -w middleware.js -w routes.json --exec ./server.sh",
     "fix": "npm run format && npm run lint -- --fix",
     "format": "prettier --write \"**/*.{json,css,scss,md}\"",
     "lint": "eslint .",
-    "validate": "commitlint-travis && npm run lint"
+    "lint:md": "markdownlint -i node_modules .",
+    "validate": "commitlint-travis && npm run lint && npm run lint:md"
   },
   "dependencies": {
-    "faker": "git+https://git@github.com/Marak/faker.js.git#d3ce6f1",
-    "json-server": "^0.14.2",
+    "faker": "git+https://git@github.com/Marak/faker.js.git#a9a11ee",
     "lodash": "^4.17.11",
-    "nodemon": "^1.18.10"
+    "nodemon": "^1.19.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^7.5.2",
-    "@commitlint/config-conventional": "^7.5.0",
-    "@commitlint/travis-cli": "^7.5.2",
+    "@commitlint/cli": "^8.0.0",
+    "@commitlint/config-conventional": "^8.0.0",
+    "@commitlint/travis-cli": "^8.0.0",
     "eslint": "^5.15.2",
     "eslint-config-codfish": "^2.3.0",
-    "husky": "^1.3.1",
+    "husky": "^2.4.0",
     "lint-staged": "^8.1.5",
+    "markdownlint-cli": "^0.16.0",
     "prettier": "^1.16.4"
   }
 }
