--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -14,17 +14,7 @@ jobs:
           node-version: 12.x
 
       - name: install dependencies
-        run: npm install --no-save
+        run: npm ci
 
       - name: lint js
         run: npm run lint
-
-      - name: build
-        run: npm run build
-        env:
-          CI: true
-
-      - name: run tests
-        run: npm run test
-        env:
-          CI: true
