--- a/package.json
+++ b/package.json
@@ -6,17 +6,15 @@
     "start": "./server.sh",
     "dev": "nodemon -w db.js -w middleware.js -w routes.json --exec ./server.sh",
     "format": "cod-scripts format",
-    "lint": "cod-scripts lint",
-    "test": "cod-scripts test"
+    "lint": "cod-scripts lint"
   },
   "dependencies": {
     "@babel/runtime": "^7.9.2",
-    "faker": "git+https://git@github.com/Marak/faker.js.git#a9a11ee",
-    "lodash": "^4.17.11",
-    "nodemon": "^1.19.1"
+    "faker": "git+https://git@github.com/Marak/faker.js.git#3b2fa4a",
+    "lodash": "^4.17.15",
+    "nodemon": "^2.0.2"
   },
   "devDependencies": {
-    "@commitlint/travis-cli": "^8.0.0",
     "cod-scripts": "^4.0.1"
   },
   "eslintConfig": {
@@ -26,8 +24,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "cod-scripts pre-commit",
-      "commit-msg": "cod-scripts commitlint -E HUSKY_GIT_PARAMS"
+      "pre-commit": "cod-scripts pre-commit"
     }
   }
 }
