--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -18,3 +18,6 @@ jobs:
 
       - name: lint js
         run: npm run lint
+
+      - name: ensure the image builds properly
+        run: docker-compose build
