--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.12.18",
-    "faker": "git+https://git@github.com/Marak/faker.js.git#3b2fa4a",
+    "faker": "^5.4.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.7"
   },
