--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,5 +8,7 @@ services:
       - ./db.js:/app/db.js
       - ./routes.json:/app/routes.json:delegated
       - ./middleware.js:/app/middleware.js:delegated
+    ports:
+      - 9999:80
     environment:
       VIRTUAL_HOST: json-server.docker
