--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@babel/runtime": "^7.21.0",
     "@faker-js/faker": "^8.0.0-alpha.1",
+    "lodash": "^4.17.21",
     "nodemon": "^2.0.22"
   },
   "devDependencies": {
