--- a/.github/workflows/validate.yml
+++ b/.github/workflows/validate.yml
@@ -19,5 +19,22 @@ jobs:
       - name: lint js
         run: npm run lint
 
-      - name: ensure the image builds properly
-        run: docker-compose build
+      - name: Docker meta
+        id: meta
+        uses: docker/metadata-action@v4
+        with:
+          images: codfish/json-server
+
+      - name: Login to DockerHub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
+
+      - name: Build and push
+        uses: docker/build-push-action@v4
+        with:
+          context: .
+          push: true
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
